<resources>
    <string name="app_name">LinkedInHelper</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="label_linkedin_helper">LinkedIn Helper</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_hi_there">Hi there! Nice to see you again.</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_forgot_password">Forgot password?</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_have_an_account">Have an account?</string>
    <string name="label_agree_to">I agree to the</string>
    <string name="label_terms_of_service">Terms of service</string>
    <string name="label_and">and</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="label_searching_for">Searching for…</string>
    <string name="label_export">Export</string>
    <string name="label_favorites">Favorites…</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
<<<<<<< HEAD
    <string name="label_name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
=======
    <string name="todo">TODO</string>
    <string name="name_company_name">Name/Company name</string>
    <string name="role">Role</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
>>>>>>> ParseAdapterModelItem
</resources>