<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="68dp" />

        <TextView
            android:id="@+id/lblSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/label_sign_up"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/loginTxtEmail4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.93"
            tools:layout_editor_absoluteX="48dp" />

        <TextView
            android:id="@+id/lblName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:textColor="#EF4A6E"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress4"
            tools:layout_editor_absoluteX="50dp" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="28dp"
            android:ems="10"
            android:hint="Your name"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/loginTextPassword4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.527"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            android:textColor="#EF4A6E"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress4"
            tools:layout_editor_absoluteX="50dp" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="28dp"
            android:ems="10"
            android:hint="Your email address"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/loginTextPassword4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.527"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/lblPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_password"
            android:textColor="#EF4A6E"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword4"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="****************"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="178dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/loginBtnSignIn4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxAgreeToTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:gravity="center|start"
                    android:text="@string/label_agree_to"
                    android:textColor="#FF6D6D6D"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/lblTermsOfService"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:text="@string/label_terms_of_service"
                    android:textAlignment="center"
                    android:textColor="#EF4A6E"
                    app:flow_verticalAlign="center" />

                <TextView
                    android:id="@+id/labelTermsOfService2"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="4dp"
                    android:gravity="center"
                    android:text="@string/label_and"
                    android:textAlignment="center"
                    android:textColor="#FF6D6D6D"
                    app:flow_verticalAlign="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblPrivacyPolicy"
                    android:layout_width="150dp"
                    android:layout_height="25dp"
                    android:gravity="start|top|left"
                    android:text="@string/label_privacy_policy"
                    android:textAlignment="center"
                    android:textColor="#EF4A6E"
                    app:flow_verticalAlign="center" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginVertical="16dp"
                android:backgroundTint="#EF4A6E"
                android:capitalize="words"
                android:text="@string/label_sign_up"
                android:textColor="#FFFFFF"
                android:visibility="visible"
                app:iconTint="#EF4A6E"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.549"
                app:layout_constraintStart_toStartOf="parent"
                app:rippleColor="#EF4A6E" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/lblHaveAnAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_have_an_account"
                    android:textColor="#B5B4B4"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginBtnSignIn4" />

                <TextView
                    android:id="@+id/lblRegisterSignIn"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:paddingStart="16dp"
                    android:text="@string/label_sign_in"
                    android:textColor="#EF4A6E"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/loginTxtForgotPassword4"
                    app:layout_constraintTop_toBottomOf="@+id/loginBtnSignIn4"
                    tools:ignore="TouchTargetSizeCheck" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</FrameLayout>